# aptos-indexer-processors-v2

./: .gitignore  Cargo.toml  Dockerfile  install.md
processor/: Cargo.toml  build.rs  config.yaml  config_account_transactions.yaml  config_custom_event.yaml  config_default.yaml  config_fungible_asset.yaml  config_user_transaction.yaml  example-config-new.yaml  example-config.yaml  run_all_processors.sh  stop_all_processors.sh
processor/proto/aptos/transaction/v1/: transaction.proto
processor/proto/aptos/util/timestamp/: timestamp.proto
processor/src/: lib.rs  main.rs
processor/src/config/: db_config.rs  indexer_processor_config.rs  mod.rs  processor_config.rs  processor_mode.rs
processor/src/db/: backfill_processor_status.rs  mod.rs  resources.rs  schema.rs
processor/src/db/migrations/2022-08-08-043603_core_tables/: up.sql
processor/src/db/migrations/2026-02-27-000000_add_validator_stats/: down.sql  up.sql
processor/src/db/migrations/2026-03-26-000000_custom_events/: down.sql  up.sql
processor/src/parquet_processors/: mod.rs  parquet_processor_status_saver.rs
processor/src/parquet_processors/parquet_account_transactions/: mod.rs  parquet_account_transactions_extractor.rs  parquet_account_transactions_processor.rs
processor/src/parquet_processors/parquet_ans/: mod.rs  parquet_ans_extractor.rs  parquet_ans_processor.rs
processor/src/parquet_processors/parquet_default/: mod.rs  parquet_default_extractor.rs  parquet_default_processor.rs
processor/src/parquet_processors/parquet_events/: mod.rs  parquet_events_extractor.rs  parquet_events_model.rs  parquet_events_processor.rs
processor/src/parquet_processors/parquet_fungible_asset/: mod.rs  parquet_fa_extractor.rs  parquet_fungible_asset_processor.rs
processor/src/parquet_processors/parquet_objects/: mod.rs  parquet_objects_extractor.rs  parquet_objects_processor.rs
processor/src/parquet_processors/parquet_stake/: mod.rs  parquet_stake_extractor.rs  parquet_stake_processor.rs
processor/src/parquet_processors/parquet_token_v2/: mod.rs  parquet_token_v2_extractor.rs  parquet_token_v2_processor.rs
processor/src/parquet_processors/parquet_transaction_metadata/: mod.rs  parquet_transaction_metadata_extractor.rs  parquet_transaction_metadata_processor.rs  transaction_metadata_processor_helpers.rs
processor/src/parquet_processors/parquet_transaction_metadata/transaction_metadata_models/: mod.rs  write_set_size_info.rs
processor/src/parquet_processors/parquet_user_transaction/: mod.rs  parquet_user_transaction_extractor.rs  parquet_user_transaction_processor.rs
processor/src/parquet_processors/parquet_utils/: gcs_uploader.rs  mod.rs  parquet_buffer_step.rs  parquet_version_tracker_step.rs  util.rs
processor/src/processors/: mod.rs  processor_status_saver.rs
processor/src/processors/account_restoration/: account_restoration_extractor.rs  account_restoration_processor.rs  account_restoration_processor_helpers.rs  account_restoration_storer.rs  mod.rs
processor/src/processors/account_restoration/account_restoration_models/: account_restoration_utils.rs  auth_key_account_addresses.rs  mod.rs  public_key_auth_keys.rs
processor/src/processors/account_transactions/: account_transactions_extractor.rs  account_transactions_model.rs  account_transactions_processor.rs  account_transactions_storer.rs  mod.rs
processor/src/processors/ans/: ans_extractor.rs  ans_processor.rs  ans_processor_queries.rs  ans_storer.rs  mod.rs
processor/src/processors/ans/models/: ans_lookup.rs  ans_lookup_v2.rs  ans_primary_name_v2.rs  ans_utils.rs  mod.rs
processor/src/processors/custom_event/: custom_event_extractor.rs  custom_event_processor.rs  custom_event_storer.rs  mod.rs
processor/src/processors/custom_event/custom_event_models/: custom_events.rs  mod.rs
processor/src/processors/default/: default_extractor.rs  default_processor.rs  default_storer.rs  mod.rs
processor/src/processors/default/models/: block_metadata_transactions.rs  mod.rs  move_modules.rs  move_resources.rs  table_items.rs  transactions.rs  write_set_changes.rs
processor/src/processors/event_file/: CONSUMERS.md  event_file_config.rs  event_file_extractor.rs  event_file_processor.rs  event_file_writer.rs  metadata.rs  mod.rs  models.rs  storage.rs  test_utils.rs  tests.rs
processor/src/processors/fungible_asset/: fungible_asset_extractor.rs  fungible_asset_processor.rs  fungible_asset_processor_helpers.rs  fungible_asset_storer.rs  mod.rs
processor/src/processors/fungible_asset/coin_models/: coin_utils.rs  mod.rs
processor/src/processors/fungible_asset/fungible_asset_models/: mod.rs  v2_fungible_asset_activities.rs  v2_fungible_asset_balances.rs  v2_fungible_asset_to_coin_mappings.rs  v2_fungible_asset_utils.rs  v2_fungible_metadata.rs
processor/src/processors/gas_fees/: gas_fee_extractor.rs  gas_fee_processor.rs  gas_fee_storer.rs  mod.rs  models.rs
processor/src/processors/monitoring/: mod.rs  monitoring_processor.rs
processor/src/processors/objects/: mod.rs  objects_extractor.rs  objects_processor.rs  objects_storer.rs  v2_object_utils.rs  v2_objects_models.rs
processor/src/processors/stake/: mod.rs  stake_extractor.rs  stake_processor.rs  stake_storer.rs
processor/src/processors/stake/models/: current_delegated_voter.rs  delegator_activities.rs  delegator_balances.rs  delegator_pools.rs  mod.rs  proposal_votes.rs  stake_utils.rs  staking_pool_voter.rs
processor/src/processors/token_v2/: mod.rs  token_v2_extractor.rs  token_v2_processor.rs  token_v2_processor_helpers.rs  token_v2_processor_queries.rs  token_v2_storer.rs
processor/src/processors/token_v2/token_models/: mod.rs  token_claims.rs  token_royalty.rs  token_utils.rs  tokens.rs
processor/src/processors/token_v2/token_v2_models/: mod.rs  v2_collections.rs  v2_token_activities.rs  v2_token_datas.rs  v2_token_metadata.rs  v2_token_ownerships.rs  v2_token_utils.rs
processor/src/processors/user_transaction/: mod.rs  user_transaction_extractor.rs  user_transaction_processor.rs  user_transaction_storer.rs
processor/src/utils/: counters.rs  mod.rs  table_flags.rs
(+66 files in other folders)
