[package]
name = "processor"
version = "0.1.0"
edition = { workspace = true }

# Workspace inherited keys
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[features]
libpq = ["aptos-indexer-processor-sdk/postgres_full", "diesel/postgres"]
# When using the default features we enable the diesel/postgres feature. We configure
# it in a feature so the CLI can opt out, since it cannot tolerate the libpq dep.
# Recall that features should always be additive.
default = ["libpq"]
failpoints = ["dep:failpoints", "failpoints/failpoints"]

[dependencies]
ahash = { workspace = true }
allocative = { workspace = true }
allocative_derive = { workspace = true }
anyhow = { workspace = true }
aptos-indexer-processor-sdk = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bigdecimal = { workspace = true }
bitflags = { workspace = true }
bytes = "1"
canonical_json = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
const_format = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
diesel_migrations = { workspace = true }
enum_dispatch = { workspace = true }
failpoints = { workspace = true, optional = true }
field_count = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
google-cloud-googleapis = { workspace = true }
google-cloud-pubsub = { workspace = true }
google-cloud-storage = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
lz4_flex = { workspace = true }

# Postgres SSL support
native-tls = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }

# Parquet support
parquet = { workspace = true }
parquet_derive = { workspace = true }
postgres-native-tls = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
strum = { workspace = true }
tiny-keccak = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
unescape = { workspace = true }
url = { workspace = true }

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.6", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
aptos-indexer-processor-sdk = { workspace = true, features = [
    "testing_framework",
] }
tempfile = { workspace = true }
